--- a/python-k8s-demo/Jenkinsfile
+++ b/python-k8s-demo/Jenkinsfile
@@ -2,16 +2,16 @@ pipeline {
     agent any
 
     environment {
-        PROJECT_ID = 'your-gcp-project-id'
-        IMAGE_NAME = "gcr.io/${PROJECT_ID}/python-k8s-demo"
-        CLUSTER = 'your-gke-cluster-name'
-        ZONE = 'your-cluster-zone'
+        PROJECT_ID = 'rama17-05-2020'
+        IMAGE_NAME = "gcr.io/rama17-05-2020/python-k8s-demo"
+        CLUSTER = 'cluster-1'
+        REGION = 'asia-south1'
     }
 
     stages {
         stage('Clone') {
             steps {
-                git url: 'https://github.com/yourusername/your-python-app.git', branch: 'main'
+                git url: 'https://github.com/ichbinuus/your-python-app.git', branch: 'main'
             }
         }
 
@@ -30,7 +30,7 @@ pipeline {
 
         stage('Deploy to GKE') {
             steps {
-                sh "gcloud container clusters get-credentials ${CLUSTER} --zone ${ZONE}"
+                sh "gcloud container clusters get-credentials ${CLUSTER} --region ${REGION}"
                 sh "kubectl set image deployment/python-k8s-deployment python-k8s=${IMAGE_NAME} || kubectl apply -f k8s/"
             }
         }
