--- a/python-k8s-demo/Jenkinsfile
+++ b/python-k8s-demo/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
 
     environment {
         IMAGE_NAME = "gcr.io/rama17-05-2020/python-k8s-demo"
-        GCP_CREDENTIALS = credentials('jen-key.json')
+        GCP_CREDENTIALS = credentials('73d05379-38c1-4f02-b431-736c922e71d6')
     }
 
     stages {
