--- a/python-k8s-demo/Jenkinsfile
+++ b/python-k8s-demo/Jenkinsfile
@@ -3,6 +3,7 @@ pipeline {
 
     environment {
         IMAGE_NAME = "gcr.io/rama17-05-2020/python-k8s-demo"
+        FULL_IMAGE = "${IMAGE_NAME}:${BUILD_NUMBER}"
     }
 
     stages {
