--- a/python-k8s-demo/Jenkinsfile
+++ b/python-k8s-demo/Jenkinsfile
@@ -2,8 +2,10 @@ pipeline {
     agent any
 
     environment {
-        IMAGE_NAME = "gcr.io/rama17-05-2020/python-k8s-demo"
-        FULL_IMAGE = "${IMAGE_NAME}:${BUILD_NUMBER}"
+    IMAGE_NAME = "asia-south1-docker.pkg.dev/rama17-05-2020/python-k8s-demo/python-k8s-demo"
+    FULL_IMAGE = "${IMAGE_NAME}:${BUILD_NUMBER}"
+}
+
     }
 
     stages {
