--- a/python-k8s-demo/Jenkinsfile
+++ b/python-k8s-demo/Jenkinsfile
@@ -24,7 +24,7 @@ pipeline {
 
         stage('Push to GCR') {
             steps {
-                withCredentials([file(credentialsId: 'd3b3f50e-b703-44cf-9890-1863036ce38', variable: 'GCP_KEY')]) {
+                withCredentials([file(credentialsId: 'd3b3f50e-b703-44cf-9890-1863036ce387', variable: 'GCP_KEY')]) {
                     sh '''
                         gcloud auth activate-service-account --key-file=$GCP_KEY
                           gcloud auth configure-docker asia-south1-docker.pkg.dev -q
