--- a/python-k8s-demo/Jenkinsfile
+++ b/python-k8s-demo/Jenkinsfile
@@ -19,7 +19,29 @@ pipeline {
         sh "docker build -t ${FULL_IMAGE} python-k8s-demo/"
     }
 }
-        
+        stage('Deploy to GKE') {
+    steps {
+        withCredentials([file(credentialsId: '4d96c430-1c52-44b6-99ba-b6bd94000c59', variable: 'GCP_KEY')]) {
+            sh '''
+                echo "🔐 Authenticating with GCP..."
+                gcloud auth activate-service-account --key-file=$GCP_KEY
+                gcloud config set project rama17-05-2020
+                gcloud config set compute/region asia-south1
+                gcloud container clusters get-credentials cluster-1 --region asia-south1
+
+                echo "🔧 Updating image in deployment file..."
+                sed -i "s|IMAGE_PLACEHOLDER|${FULL_IMAGE}|" python-k8s-demo/k8s/deployment.yaml
+
+                echo "🚀 Applying Kubernetes manifests..."
+                kubectl apply -f python-k8s-demo/k8s/deployment.yaml
+                kubectl apply -f python-k8s-demo/k8s/service.yaml
+
+                echo "✅ Deployment triggered!"
+            '''
+        }
+    }
+}
+
 
 
         stage('Push to Artifact Registry') {
